--- a/server/views/lobby.html
+++ b/server/views/lobby.html
@@ -27,6 +27,10 @@
                 {{gameOptions.numPlayers}} players
               </td>
               <td>
+                Created
+                <span class="date" title="{{created.toISOString}}"></span>
+              </td>
+              <td>
                 <a href="{{url}}">Join</a>
               </td>
             </tr>
@@ -55,7 +59,7 @@
           </form>
         </div>
       </div>
-      
+
     </div>
   </div>
 </div>
