Use dropdown for number of players

--- a/packages/colonizers/server/views/lobby.html
+++ b/packages/colonizers/server/views/lobby.html
@@ -52,8 +52,10 @@
             </div>
             <div class="form-group">
               <label for="numPlayers">Players</label>
-              <input ype="text" name="numPlayers" class="form-control"
-                value="3" />
+              <select name="numPlayers" class="form-control">
+                <option value="3">3</option>
+                <option value="4">4</option>
+              </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
