--- a/packages/colonizers-client/public/css/game.css
+++ b/packages/colonizers-client/public/css/game.css
@@ -4753,7 +4753,7 @@ body {
   width: 100%;
   height: 100%;
   background: #eee;
-  background-image: url(/img/retina_wood_@2X.png);
+  background-image: url(../img/retina_wood_@2X.png);
   background-size: 512px;
   -webkit-box-shadow: inset 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: inset 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
@@ -4774,7 +4774,7 @@ body {
 }
 .sidebar {
   background-color: #222222;
-  background-image: url(/img/dark_stripes_@2X.png);
+  background-image: url(../img/dark_stripes_@2X.png);
   background-size: 50px;
   padding: 10px;
   height: 100%;
