--- a/packages/colonizers-client/app/js/components/players.html
+++ b/packages/colonizers-client/app/js/components/players.html
@@ -2,7 +2,8 @@
 
   <div class="player">
     <h4>
-      <img class="avatar" data-bind="attr: { src: user.avatarUrl }" />
+      <img class="avatar"
+        data-bind="attr: { src: user.avatarUrl }, visible: user.avatarUrl" />
       <span data-bind="text: user.name"></span>
       <span class="icon-star" data-bind="text: player.victoryPoints.public"></span>
     </h4>
