--- a/packages/colonizers-client/app/js/components/alert.html
+++ b/packages/colonizers-client/app/js/components/alert.html
@@ -1,4 +1,7 @@
-<div class="alert alert-info alert-fixed-top" style="display: none" data-bind="visible: message">
+<div class="alert alert-info alert-fixed-top" style="display: none"
+  data-bind="visible: message,
+             style: { backgroundColor: color, borderColor: color }">
+
   <button type="button" class="close" data-bind="click: dismiss">
     <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
   </button>
