Introduced common js bundle

--- a/packages/colonizers/views/game.html
+++ b/packages/colonizers/views/game.html
@@ -57,6 +57,7 @@
 
   <script>window.roomId = '{{{ roomId }}}'</script>
   <script>window.userId = '{{{ userId }}}'</script>
+  <script src="/common.js" charset="utf-8"></script>
   <script src="/room.js" charset="utf-8"></script>
 </body>
 </html>
