--- a/views/layout.html
+++ b/views/layout.html
@@ -37,6 +37,7 @@
   </nav>
 </div>
 {{{ yield }}}
+<script src="/common.js" charset="utf-8"></script>
 <script src="/site.js" charset="utf-8"></script>
 </body>
 </html>
